[metadata]
name = hubshare
author = Project Jupyter Contributors
author-email = jupyter@googlegroups.com
summary = Share files among JupyterHub users
description-file = README.md
home-page = https://github.com/jupyterhub/hubshare
license = BSD
classifier =
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Intended Audience :: Developers
    Intended Audience :: Education
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: Python
    Programming Language :: JavaScript
keywords =
    jupyter
    jupyterhub
    notebook
[files]
packages =
    hubshare
[entry_points]
console_scripts =
    hubshare = hubshare.app:main
